# adhoc-railway

./: .classpath  .gitignore  .project  .travis.yml  Makefile  README  README.md  TODO  adhocrailway.conf  adhocrailway.conf.sample  build.gradle  build.properties  build.xml  jitpack.yml  local.properties  settings.gradle
AdHoc-MaerklinGenerator/: .cproject  .directory  .project  protocol.txt
AdHoc-Railway Android/: AndroidManifest.xml
AdHoc-Railway-Android/: AndroidManifest.xml  build.xml  local.properties
AdHoc-Railway-Brain/: .cproject  .project
AdHoc-Railway-Deployment-Page/: Gruntfile.js  bower.json  package.json
AdHoc-Railway-Domain/: .classpath  .project  build.gradle
AdHoc-Railway-GUI/: .classpath  .gitignore  .project  README  TODO  adhocrailway.conf  alltest.xml  build.gradle  build.properties  build.xml  locos.xml  run-adhoc-railway-ui.launch  start.sh  test.conf  test.xml
AdHoc-Railway-Server/: app.js  package.json
AdHoc-Railway-Web/: AdHoc-Railway-Web.sublime-workspace  app.js  package.json  publish_and_run.sh
AdHoc-Railway-Webclient/: app.js  package.json
ch.fork.AdHocRailway.domain/: .gitignore  build.gradle  run-all-domain-unit-tests.launch
ch.fork.AdHocRailway.model/: build.gradle  model.gradle
ch.fork.AdHocRailway.persistence/: build.gradle
ch.fork.AdHocRailway.persistence.adhocserver/: build.gradle
ch.fork.AdHocRailway.persistence.xml/: .gitignore
ch.fork.AdHocRailway.railway.brain/: build.gradle
ch.fork.AdHocRailway.railway.srcp/: build.gradle
ch.fork.AdHocRailway.service/: build.gradle
ch.fork.AdHocRailway.ui/: .gitignore  AdHoc-Railway.sh  build.gradle  run-all-ui-unit-tests.launch  start.bat
ch.fork.adhocrailway.model/: build.gradle
ch.fork.adhocrailway.persistence/: build.gradle
ch.fork.adhocrailway.persistence.adhocserver/: build.gradle
ch.fork.adhocrailway.persistence.xml/: .gitignore  build.gradle
ch.fork.adhocrailway.railway.brain/: build.gradle
ch.fork.adhocrailway.railway.srcp/: build.gradle
ch.fork.adhocrailway.service/: build.gradle
ch.fork.adhocrailway.ui/: .directory  adhocrailway.conf.sample  alltest.xml  build.gradle
db/: adhocrailway.sql  adhocrailway_withlocomotives.sql
doc/: RailControl.gaphor  adhoc_railway_0.3.xsd  adhocrailway.sql  design.xmi  railcontrol.xml  railcontrol.xsd  railcontrol_0.1.xsd  splash.xcf  splash_shadow.xcf
etc/: adhocrailway.sql  example.conf  example_0.3.conf  log4j.properties  railcontrol.conf  standard.conf  weekend_2006.conf  weekend_2007_routes.conf
gradle/: local.properties
jsrcpc-lib/: build.gradle
misc/: adhoc-node-server  mongod
samples/: AdHoc-Baehnler Loks 2021.xml  AdHoc-Baehnler Loks MASTER 2016_neu.xml  AdHoc-Baehnler Loks MASTER 2018.xml  AdHoc-Baehnler Loks MASTER 2019.xml  AdHoc-Baehnler Loks MASTER.xml  weekend_2007_routes.conf  weekend_2007_routes_0.4.conf  weekend_2015_1.xml  weekend_2015_3.xml  weekend_2015_5.xml  weekend_2015_alles programmiert.xml  weekend_2016_1.xml  weekend_2016_4.xml  weekend_2016_5.xml  weekend_2016_8.xml  weekend_2016_alles programmiert3.xml  weekend_2016_fahrstrassen 3.xml  weekend_2016_fahrstrassen 4.xml  weekend_2016_fahrstrassen 7.xml  weekend_2016_weichen_programmiert.xml  weekend_2018_fahrstrassen_programmiert.xml  weekend_2018_weichen_programmiert.xml  weekend_2019.xml  weekend_2019_alle_weichen.xml  weekend_2019_save_freitag_1.xml  weekend_2019_weichen_bis_100.xml  weekend_2021.xml  weekend_2022.xml
src/: LocomotiveControl.java  (+11 more)
srcpd/: .cproject  .gitignore  .project  10-liusb.rules  10-locobufferusb.rules  10-opendcc.rules  42-adhocbrain.rules  AUTHORS  ChangeLog  DESIGN  Makefile  Makefile.am  Makefile.in  NEWS  PROGRAMMING-HOWTO  README  TODO  adhocserver-init-script  config.status  configure  configure.in  init.d.redhat  init.d.suse  mysrcpd.conf  srcpd brain.launch  srcpd loopback.launch  srcpd.conf  srcpd.lsm  srcpd.redhat.spec  srcpd.spec  srcpd.upstart
srcpd/autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
srcpd/debian/: Makefile.am  README.Debian  changelog  control  copyright  docs  init.d  rules
srcpd/man/: Makefile  Makefile.am  Makefile.in  srcpd.conf.5
srcpd/man/de/: Makefile  Makefile.in  srcpd.8  srcpd.conf.5
srcpd/src/: Makefile  Makefile.am  Makefile.in  adhocmm.c  adhocmm.h  clientservice.c  config-srcpd.c  config-srcpd.h  config.h  config.h.in  dcc-address.h  ddl-s88.c  ddl-s88.h  ddl.c  ddl.h  ddl_maerklin.c  ddl_maerklin.h  ddl_nmra.c  ddl_nmra.h  hsi-88.c  hsi-88.h  i2c-dev.c  i2c-dev.h  ib.c  ib.h  io.c  io.h  li100-main.c  li100.c  li100.h  loconet.c  loopback.c  loopback.h  m605x.c  m605x.h  netservice.c  portio.c  selectrix.c  selectrix.h  srcp-command.c  (+24 more)
srcpd/src/.deps/: adhocmm.Po  clientservice.Po  config-srcpd.Po  dcc-address.Po  ddl-s88.Po  ddl.Po  ddl_maerklin.Po  ddl_nmra.Po  hsi-88.Po  i2c-dev.Po  ib.Po  io.Po  li100-main.Po  loconet.Po  loopback.Po  m605x.Po  netservice.Po  portio.Po  selectrix.Po  srcp-command.Po  srcp-descr.Po  srcp-error.Po  srcp-fb.Po  srcp-ga.Po  srcp-gl.Po  srcp-gm.Po  srcp-info.Po  srcp-lock.Po  srcp-power.Po  srcp-server.Po  srcp-session.Po  srcp-sm.Po  srcp-time.Po  srcpd.Po  syslogmessage.Po  toolbox.Po  ttycygwin.Po  zimo.Po
srcpd/test/: testGA  testGL_DDL_28_functions  testGL_DDL_M5  testGL_DDL_N5  testGL_P
srcpd_raspberry/: ChangeLog  Makefile.am  Makefile.in  NEWS  README.freebsd  README.loconet  README.mcp-fb.txt  README.selectrix  acinclude.m4  configure  configure.ac  init.d.lsb  srcpd.conf  srcpd.conf.orig
srcpd_raspberry/man/: Makefile.in  srcpd.8  srcpd.conf.5
srcpd_raspberry/man/de/: Makefile.am  Makefile.in
srcpd_raspberry/src/: Makefile.am  Makefile.in  clientservice.c  config-srcpd.c  config-srcpd.h  config.h.in  dcc-address.c  ddl-s88.c  ddl-s88.h  ddl.c  ddl_maerklin.c  ddl_mfx.c  ddl_mfx.h  ib.c  ib.h  io.c  io.h  li100-main.c  li100.c  li100.h  loconet.c  loconet.h  loopback.c  loopback.h  m605x.c  m605x.h  mcp-fb.c  mcp-fb.h  netservice.c  portio.h  selectrix.c  selectrix.h  srcp-command.c  srcp-fb.c  srcp-fb.h  srcp-ga.c  srcp-ga.h  srcp-gl.c  srcp-gl.h  srcp-power.c  (+7 more)
(+1893 files in other folders)
